[development] Auto commit on 2026-08-31 15:18:55 | Files: account-junior-nextjs.zip account-junior-nextjs/.env.development account-junior-nextjs/.env.production account-junior-nextjs/middleware.ts account-junior-nextjs/src/components/layout/dashboard-layout.tsx account-junior-nextjs/src/components/shared/image/image-preview-cell.tsx account-junior-nextjs/src/components/shared/modal/custom-modal.tsx account-junior-nextjs/src/features/account-opening/components/account-images.tsx account-junior-nextjs/src/features/account-opening/components/accountExistsModal.tsx account-junior-nextjs/src/features/account-opening/components/confirmModal.tsx account-junior-nextjs/src/features/account-opening/components/errorModal.tsx account-junior-nextjs/src/features/account-opening/components/form-sections/personal-details-fields.tsx account-junior-nextjs/src/features/account-opening/components/image-upload.tsx account-junior-nextjs/src/features/account-opening/components/open-account-content.tsx account-junior-nextjs/src/features/account-opening/components/successModal.tsx account-junior-nextjs/src/features/account-opening/components/validateModal.tsx account-junior-nextjs/src/features/account-opening/hooks/use-account-submission.ts account-junior-nextjs/src/features/auth/services/login.service.ts account-junior-nextjs/src/features/auth/services/register.service.ts account-junior-nextjs/src/features/junior-account/components/junior-account-content.tsx account-junior-nextjs/src/features/junior-account/services/junior-account-service.ts account-junior-nextjs/src/features/user/services/user.service.ts account-junior-nextjs/src/messages/en.json account-junior-nextjs/src/messages/kh.json account-junior-nextjs/src/utils/axios/handleError.ts account-junior-nextjs/src/utils/axios/index.ts account-junior-nextjs/src/utils/local-storage/permission.ts account-junior-nextjs/src/utils/local-storage/userInfo.ts account-online-nextjs.zip account-online-nextjs/.env.development account-online-nextjs/